# word-search-generator

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CHANGES.md  CHANGLOG.md  LICENSE  Makefile  README.md  TODO.md  c.py  hatch.toml  ipython_config.py  mkdocs.yml  mypy.ini  noxfile.py  old-tox.ini  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_dev.txt  ruff.toml  run  setup.cfg  setup.py  tox.ini  uv.toml
.github/workflows/: format.yml  lint.yml  lint_and_format.yml  test.yml  tests.yml  tox.yml  type_check.yml  types.yml
docs/: index.md  requirements.txt
docs/reference/: cli.md  index.md  word.md
docs/reference/mask/: base-object.md  bitmap.md  compound.md  ellipse.md  image.md  index.md  polygon.md  rectangle.md  regular-polygon.md  shapes.md
docs/tutorials/: cli.md  quick-start.md
files/: puzzle.csv  puzzle.txt
src/word_search_generator/: __init__.py  __main__.py  cli.py  config.py  console.py  export.py  formatter.py  generate.py  generate2.py  mask.py  puzzle.py  types.py  utils.py  word.py  word_placement_dupes.py  words.py  words.txt
src/word_search_generator/core/: __init__.py  directions.py  formatter.py  game.py  generator.py  validator.py  word.py  wordlist.py
src/word_search_generator/crossword/: _generator.py  crossword.py
src/word_search_generator/data/: amphibians.txt  animals.txt  art.txt  automotive.txt  birds.txt  chess.txt  christmas.txt  coastal.txt  countries.txt  desserts.txt  dictionary.txt  dogs.txt  elementary.txt  elements.txt  fish.txt  fruits.txt  geography.txt  greek_gods.txt  halloween.txt  history.txt  insects.txt  kitchen.txt  literature.txt  math.txt  meats.txt  medicine.txt  mlb.txt  mls.txt  music.txt  nba.txt  nfl.txt  nhl.txt  pirates.txt  science.txt  soccer_clubs.txt  space.txt  sports.txt  technology.txt  trees.txt  us_cities.txt  (+5 more)
src/word_search_generator/formatter/: __init__.py  formatter.py  word_search_formatter.py
src/word_search_generator/game/: __init__.py  game.py  word_search.py
src/word_search_generator/games/: __init__.py
src/word_search_generator/games/word_search/: _formatter.py  _generator.py  word_search.py
src/word_search_generator/generator/: __init__.py  generator.py  word_search.py
src/word_search_generator/mask/: __init__.py  bitmap.py  ellipse.py  mask.py  polygon.py  shapes.py
src/word_search_generator/tui/: __init__.py
src/word_search_generator/tui/word_search/: __init__.py  _board.py  _board_cell.py  _puzzle_word.py  _screen_quit.py  _timer.py  _word_list.py  _words_to_find.py  style.css  style.tcss  tui.py
src/word_search_generator/word/: __init__.py  validation.py
src/word_search_generator/word_search/: __init__.py  _formatter.py  _generator.py  word_search.py
tests/: __init__.py  conftest.py  test_Formatter.py  test_Game.py  test_Generator.py  test_Mask.py  test_Mask_bitmap.py  test_Mask_ellipse.py  test_Validator.py  test_Word.py  test_WordSearch.py  test_cli.py  test_export.py  test_generate.py  test_puzzles.py  test_shapes.py  test_tui.py  test_utils.py  test_validators.py  test_version.py  test_word_validation.py  words-5.txt  words-50.txt  words-junk.txt
tools/: build_masks_output_dict.py  check_pdf_export_sizes.py  gui.py  pdf_layout_testing.py  time_testing.py
tools/sample_word_lists/: words-10.txt  words-25.txt
word_search_generator/: __init__.py  __main__.py  config.py  export.py  generate.py  utils.py
