[project]
name = "word-search-generator"
version = "5.1.0"
authors = [{ name = "Josh Duncan", email = "joshbduncan@gmail.com" }]
description = "Make awesome Word Search puzzles"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["puzzles", "games", "word-search"]
license = "MIT"
classifiers = [
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment :: Puzzle Games",
  "Typing :: Typed",
]
dependencies = [
  "fpdf2==2.8.7",
  "pillow==12.2.0",
  "rich==14.3.3",
  "ordered-set==4.1.0",
]

[project.urls]
homepage = "https://github.com/joshbduncan/word-search-generator"
documentation = "https://github.com/joshbduncan/word-search-generator/wiki"
repository = "https://github.com/joshbduncan/word-search-generator.git"
changelog = "https://github.com/joshbduncan/word-search-generator/blob/main/CHANGELOG.md"
bug-tracker = "https://github.com/joshbduncan/word-search-generator/issues"

[project.scripts]
word-search = "word_search_generator.cli:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = "all"

[dependency-groups]
dev = ["pre-commit-uv", "pre-commit"]
lint = ["ruff"]
nox = ["nox", "nox-uv"]
test = [
  "pdfplumber",
  "pypdf",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-repeat",
  "pytest",
]
type_check = ["ty"]

[tool.uv.sources]
word-search-generator = { workspace = true }
