[metadata]
name = word-search-generator
version = attr: word_search_generator.__version__
author = Josh Duncan
author_email = joshbduncan@gmail.com
description = Make awesome Word Search puzzles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joshbduncan/word-search-generator
project_urls =
    Bug Tracker = https://github.com/joshbduncan/word-search-generator/issues
keywords = puzzles, games
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = True
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.9
install_requires =
    fpdf2 >= 2.4.2

[options.extras_require]
tests =
    PyPDF2 >= 1.26.0
    pytest >= 6.2.5
    pytest-cov >= 3.0.0
dev =
    black >= 21.12b0
    flake8 >= 4.0.1
    isort >= 5.10.1
    mypy >= 0.931

[options.packages.find]
where=src

[options.package_data]
word_search_generator = py.typed

[options.entry_points]
console_scripts =
    word-search = word_search_generator.cli:main

[flake8]
max-line-length = 88
